// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component Snapshots matches snapshot for basic input 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1F2937",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "paddingHorizontal": 16,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      accessibilityRole="none"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Enter email"
      placeholderTextColor="#9CA3AF"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1F2937",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          undefined,
          false,
        ]
      }
    />
  </RCTView>
</RCTView>
`;

exports[`Input Component Snapshots matches snapshot with error 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1F2937",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Password
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#EF4444",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "paddingHorizontal": 16,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Password"
      accessibilityRole="none"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9CA3AF"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1F2937",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          undefined,
          false,
        ]
      }
    />
  </RCTView>
  <RCTText
    ref={null}
    style={
      {
        "color": "#EF4444",
        "fontSize": 12,
        "marginTop": 4,
      }
    }
    testID="RCTText"
  >
    Too short
  </RCTText>
</RCTView>
`;

exports[`Input Component Snapshots matches snapshot with icons 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1F2937",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Search
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 52,
        "paddingHorizontal": 16,
      }
    }
  >
    <RCTText
      color="#9CA3AF"
      name="magnify"
      ref={null}
      size={20}
      style={
        {
          "marginRight": 12,
        }
      }
      testID="icon-magnify"
    >
      magnify
    </RCTText>
    <RCTTextInput
      accessibilityLabel="Search"
      accessibilityRole="none"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9CA3AF"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1F2937",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          {
            "paddingLeft": 0,
          },
          {
            "paddingRight": 0,
          },
        ]
      }
    />
    <RCTTouchableOpacity
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessible={true}
      aria-disabled={true}
      disabled={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      ref={null}
      style={
        {
          "marginLeft": 12,
          "padding": 4,
        }
      }
    >
      <RCTText
        color="#9CA3AF"
        name="close"
        ref={null}
        size={20}
        testID="icon-close"
      >
        close
      </RCTText>
    </RCTTouchableOpacity>
  </RCTView>
</RCTView>
`;
